--- a/home.scss
+++ b/home.scss
@@ -16,9 +16,151 @@
   --hundred-width: 100%;
   --zero-width: 0%;
 }
+// --------mobile-menu-bar--------
+.menuBar-module {
+  display: none;
+  width: 100%;
+  height: 100vh;
+  background-color: #007378;
+  position: absolute;
+  z-index: 10000;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .menu-element {
+    width: 80%;
+    height: 90vh;
+    .x-icon {
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      margin-bottom: 30px;
+      i {
+        color: white;
+        font-size: 24px;
+        cursor: pointer;
+      }
+    }
+    .menu-part {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      .mobile-image {
+        width: 100px;
+        img {
+          width: 100%;
+        }
+      }
+      h3 {
+        color: white;
+        font-style: italic;
+      }
+      .contact-info-in-menuBar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        a {
+          text-decoration: none;
+          color: white;
+          display: flex;
+          align-items: center;
+          gap: 5px;
+        }
+      }
+    }
+  }
+}
+// ----------module----------
+.overlay-module {
+  width: 100%;
+  min-height: 100vh;
+  position: absolute;
+  top: 0;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.373);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  overflow-y: hidden;
+  .overlay-element {
+    width: 600px;
+    height: 370px;
+    background-color: #00876b;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 10px;
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+    .module-left-side {
+      width: 40%;
+      height: 350px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      gap: 5px;
+      div {
+        width: 100%;
+        img {
+          width: 100%;
+          height: 200px;
+          object-fit: cover;
+        }
+      }
+      h3 {
+        color: white;
+      }
+      .price {
+        font-size: inherit;
+        font-size: 16px;
+        color: white;
+      }
+      button {
+        width: 100%;
+        background-color: white;
+        padding: 8px;
+        border-radius: 5px;
+        border: none;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 500;
+        transition: all 0.5s ease-in-out;
+        &:hover {
+          transform: scale(1.02);
+        }
+      }
+    }
+    .module-right-side {
+      width: 60%;
+      height: 350px;
+      overflow-y: scroll;
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      li {
+        h3 {
+          color: white;
+          font-size: inherit;
+        }
+        p {
+          font-size: inherit;
+          font-size: 16px;
+          color: white;
+        }
+      }
+    }
+  }
+}
 // ----------header---------
 header {
   width: 100%;
+  position: relative;
+
   //   ---------up-side-in-header---------
   .up-side-in-header {
     width: 100%;
@@ -656,7 +798,7 @@ main {
   }
   // ---------------doctors-------------
   .doctors-container {
-    display: flex;
+    display: none;
     justify-content: center;
     margin-top: 110px;
     .doctors-element {
@@ -741,6 +883,75 @@ main {
             gap: 10px;
             color: white;
             height: 100px;
+          }
+        }
+      }
+    }
+  }
+  // ----------healty-notes----------
+  .healty-notes-container {
+    display: none;
+    justify-content: center;
+    margin-top: 110px;
+    .healty-notes-element {
+      width: 80%;
+      padding-top: 30px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      h3 {
+        text-decoration: underline;
+        cursor: pointer;
+        margin-bottom: 5px;
+      }
+      .healty-notes {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 15px;
+        width: 100%;
+        @include responsive800 {
+          width: 100%;
+        }
+        li {
+          width: 220px;
+          height: 320px;
+          background-color: #00994a;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          border-radius: 10px;
+          cursor: pointer;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          transition: all 0.5s ease-in-out;
+          &:hover {
+            transform: scale(1.02);
+          }
+          .note-image {
+            width: 220px;
+            height: 200px;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              border-top-left-radius: 10px;
+              border-top-right-radius: 10px;
+            }
+          }
+          .note-text {
+            width: 90%;
+            padding: 10px;
+            gap: 10px;
+            color: white;
+            height: 100px;
+            display: -webkit-box;
+            -webkit-line-clamp: 4;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
           }
         }
       }
