--- a/home.css
+++ b/home.css
@@ -98,6 +98,11 @@
   align-items: flex-start;
   gap: 10px;
 }
+@media screen and (max-width: 768px) {
+  .overlay-module .overlay-element {
+    width: 300px;
+  }
+}
 .overlay-module .overlay-element .module-left-side {
   width: 40%;
   height: 350px;
@@ -114,6 +119,11 @@
   height: 200px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+@media screen and (max-width: 768px) {
+  .overlay-module .overlay-element .module-left-side div img {
+    height: 150px;
+  }
 }
 .overlay-module .overlay-element .module-left-side h3 {
   color: white;
