--- a/home.scss
+++ b/home.scss
@@ -96,6 +96,9 @@
     display: flex;
     align-items: flex-start;
     gap: 10px;
+    @include responsive768 {
+      width: 300px;
+    }
     .module-left-side {
       width: 40%;
       height: 350px;
@@ -109,6 +112,9 @@
           width: 100%;
           height: 200px;
           object-fit: cover;
+          @include responsive768 {
+            height: 150px;
+          }
         }
       }
       h3 {
